src/test/deca/context/invalid/created/return/return_float_void.deca
// Description :
//    return mauvais type : void, demandé float
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: ?? 

class A{
float met(){
}
}